              understand the limitations of planar diagram codes.
            - New routine hash(), which uses the tight encoding.
            - New routines overForComponent() and underForComponent().
            - New variant of reverse() to reverse just one component of a
              multiple-component link.
            - New routine componentsByStrand().
            - Regarding Reidemeister moves:
              + The (check, perform) variants of r1(), r2() and r3() are
                deprecated.  You should now use these routines _without_ extra
                check/perform arguments: they will always check for and (if
                possible) perform the relevant moves.
              + New routines hasR1(), hasR2() and hasR3() for checking only.
              + New read-only routines withR1(), withR2() and withR3() that (if
                possible) return a new link with the relevant moves performed.
            - Extended knotSig(), rewrite() and simplifyExhaustive() to work
              with all link diagrams with fewer than 64 link components.
              It is now recommended to use sig() and fromSig() instead of
              knotSig() and fromKnotSig() since these names better reflect the
              scope of these routines.  The original names knotSig() and
              fromKnotSig() have been kept (and are _not_ deprecated).
            - Routine hasReducingPass() can now handle multiple-component links.
            - Added a variant of translate() that takes crossings instead of
              strand references.
            - Added an alias sig() for knotSig().
            - Renamed intelligentSimplify() to simplify().  The old name is
              kept as a deprecated alias.
            - Fixed a bug where calling resolve() would not clear out any
              cached link polynomials that had already been computed.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.