@@ -284,6 +284,9 @@ Version 7.4  [ (to be announced) ]
             - New variant of reverse() to reverse just one component of a
               multiple-component link.
             - New routine componentsByStrand().
+            - New routine linking2(), which returns twice the linking number;
+              linking() will now throw an exception when called on a virtual
+              link whose linking number is not an integer.
             - Regarding Reidemeister moves:
               + The (check, perform) variants of r1(), r2() and r3() are
                 deprecated.  You should now use these routines _without_ extra
